# comfyUI_Vertex_API

./: .gitignore  README.md  __init__.py  auth_node.py  base.py  config_nodes.py  image_node.py  pyproject.toml  requirements.txt  text_node.py  utils.py  verify_config.py  verify_redesign.py  verify_refactor.py  vertex.py  从0开始获取Vertex AI 凭证的方法.md
.github/workflows/: publish.yml
